# daytistics

./: .gitignore  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  INSTALL.md  LICENSE  README.md  REST.md  SECURITY.md  STRUCTURE.md  TODO  alembic.ini  db.sqlite  db.sqlite3  docker-compose.dev.yml  docker-compose.yml  index.html  manage.py  package.json  pnpm-lock.yaml  private.key  pyproject.toml
backend/: .env  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.test  EVALUATE.md  alembic.ini  config.py  database.db  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini
backend/alembic/: README  env.py
backend/alembic/versions/: 6c3ab2f8b1bc_migrate_to_sqlalchemy.py  9de00199c7a4_update_user_table.py  a405a7f19525_add_fields_to_user_table.py  ca47d946b428_update_user_table_37.py  d1277f33006f_added_user_table.py
backend/application/: __init__.py
backend/application/commands/: __init__.py
backend/application/development/: commands.py
backend/application/errors/: __init__.py  common.py  users.py
backend/application/main/: __init__.py  routes.py
backend/application/models/: __init__.py  daytistics.py  users.py
backend/application/templates/: index.html
backend/application/utils/: encryption.py  users.py  whitelist.py
backend/core/: __init__.py  extensions.py
backend/core/api/: __init__.py  router.py  users.py
backend/core/errors/: __init__.py  common.py  email.py  rejections.py  users.py  verify.py
backend/core/models/: __init__.py  daytistics.py  rejections.py  users.py
backend/core/services/: __init__.py  cp_verifications.py  verification.py  verificator.py
backend/core/utils/: common.py  emails.py  encryption.py  routes.py  users.py  verification.py
backend/daytistics/: app.py  claudes-idea.py  config.py  database.py  dependencies.py  graphql.py  main.py  settings.py
backend/daytistics/activities/: api.py  helpers.py  models.py
backend/daytistics/auth/: auth.py  exceptions.py  models.py  services.py
backend/daytistics/config/: api.py  urls.py
backend/daytistics/core/: api.py
backend/daytistics/daytistics/: api.py  helpers.py  schemes.py  urls.py
backend/daytistics/diary/: apps.py  models.py  schemes.py
backend/daytistics/integrations/: database.py  graphql.py  injections.py
backend/daytistics/libs/: container.py  database.py  graphql.py  templates.py
backend/daytistics/shared/: __init__.py
backend/daytistics/users/: api.py  apps.py
backend/daytistics/utils/: validation.py
backend/daytistics/wellbeing/: apps.py  models.py  schemes.py
backend/envs/: dev.env  preset.env  testing.env
backend/src/: __init__.py  extensions.py
backend/src/api/: __init__.py  auth.py  base.py  rest.py  routes.py
backend/src/commands/: __init__.py
backend/src/development/: __init__.py  routes.py
backend/src/errors/: __init__.py  email.py  users.py  verify.py
backend/src/main/: __init__.py  routes.py
backend/src/models/: daytistics.py  users.py
backend/src/services/: verify.py
backend/src/utils/: emails.py  encryption.py  users.py  verify.py  whitelist.py
backend/tests/: conftest.py  factories.py  mocking.py  settings.py  test_results.txt  tests.env
backend/tests/activities/: test_api.py
backend/tests/daytistics/: test_api.py
backend/tests/models/: test_users.py
backend/tests/plugins/: database.py  sqlalchemy.py
backend/tests/test_api/: test_auth.py  test_users_api.py
backend/tests/test_models/: test_users.py  test_users_model.py
backend/tests/test_services/: test_verification.py  test_verify.py
backend/tests/users/: test_api.py
daytistics-core/: Dockerfile  manage.py  pyproject.toml
daytistics-core/.github/workflows/: django.yml
daytistics-core/accounts/: admin.py  models.py
daytistics-core/accounts/migrations/: 0001_initial.py
daytistics-core/activities/: signals.py  urls.py  views.py
daytistics-core/activities/migrations/: 0001_initial.py
daytistics-core/app/accounts/: apps.py  models.py
daytistics-core/app/activities/: apps.py  models.py  schemes.py  signals.py  urls.py  views.py
daytistics-core/app/config/: asgi.py  urls.py  wsgi.py
daytistics-core/app/daytistics/: api.py  apps.py  helpers.py  models.py  schemes.py  urls.py  views.py
daytistics-core/app/diary/: apps.py
daytistics-core/app/home/: apps.py  urls.py
daytistics-core/app/templates/: base.html  error.html
daytistics-core/app/theme/: apps.py
daytistics-core/app/tools/: apps.py  decorators.py  urls.py  views.py
daytistics-core/app/users/: api.py  apps.py  models.py  schemes.py  serializers.py  tokens.py  urls.py
daytistics-core/app/utils/: api.py  validation.py
daytistics-core/app/wellbeing/: apps.py  schemes.py
daytistics-core/config/: asgi.py  urls.py
daytistics-core/config/settings/: base.py  dev.py  prod.py
daytistics-core/daytistics/: apps.py  storage.py  urls.py  views.py
daytistics-core/home/: urls.py
daytistics-core/templates/: base.html
daytistics-core/tests/: conftest.py  factories.py  settings.py  test_fixtures.py
daytistics-modeler/: pyproject.toml
daytistics-modeler/app/: main.py
docs/: .gitignore  Dockerfile.dev  app.config.ts  docusaurus.config.ts  envs.md  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  rejections.md  rest.md  tokens.config.ts  tsconfig.json  users.md
docs/blog/: 2024-11-26-hello-world.md  authors.yml  tags.yml
docs/components/: Logo.vue
docs/content/: 0.index.md
docs/docs/: index.md
(+574 files in other folders)
