[tool.poetry]
name = "daytistics"
version = "0.1.0"
description = ""
authors = ["Leo Gall <gall.dev@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-allauth = "^64.0.0"
Django = "^5.0.7"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
django-components = "^0.87"
django-htmx = "^1.18.0"
django-widget-tweaks = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
