[tool.poetry]
name = "daytistics-core"
version = "0.1.0"
description = ""
authors = ["Leo Gall <gall.dev@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-allauth = "^64.0.0"
Django = "^5.0.7"
django-widget-tweaks = "^1.5.0"
django-mathfilters = "^1.0.0"
django-tailwind = "^3.8.0"
django-htmx = "^1.19.0"
django-browser-reload = "^1.13.0"
whitenoise = { extras = ["brotli"], version = "^6.7.0" }
gunicorn = "^23.0.0"
pymysql = "^1.1.1"
mysqlclient = "^2.2.4"
python-dotenv = "^1.0.1"
django-unicorn = "^0.61.0"
djangorestframework = "^3.15.2"
dj-rest-auth = "^6.0.0"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"
celery = "^5.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"
pytest-django = "^4.8.0"
pytest-factoryboy = "^2.7.0"
faker = "^26.1.0"
pytest-env = "^1.1.3"
freezegun = "^1.5.1"
pylint = "^3.2.6"
sphinx = "^8.0.2"
sphinx-autodoc-typehints = "^2.2.3"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.pytest_env]
DJANGO_SECRET_KEY = "RtcPToOOZ82erjag0zAVAQ3mmha9MrTx"
DJANGO_ALLOWED_HOSTS = "localhost,example.com"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
