[tool.poetry]
name = "daytistics-modeler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "CC BY-NC-SA 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
numpy = "^2.1.1"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
